# fuzzming

./: .context  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
doc/: executor.md  reader.md
docs/: audit-report-dynamicswapfeemodule.md  case-study-dynamicswapfeemodule.md  composition.md  entry.md  executor.md  fuzzer.md  generator.md  interfaces.md  llm.md  orchestrator.md  reader.md  reporter.md  shared.md  testing.md
docs/diagrams/: executor-class.puml  fuzzer-class.puml  generator-class.puml  orchestrator-class.puml  reader-class.puml  reporter-class.puml  shared-class.puml
examples/: Simple.sol  Vault.bodies.json  generate.rs  lcov.info  read_reader.rs  test_fuzzer_reader.rs  test_reader.rs
examples/foundry_app/: fuzz_output.json  lcov.info
examples/foundry_app/cache/: solidity-files-cache.json
examples/foundry_app/test/: Simple.t.sol
src/: lib.rs  main.rs
src/base/: BaseHandler.sol
src/composition/: composition_root.rs  mod.rs
src/demo/: mod.rs
src/entry/: mod.rs
src/entry/cicd/: cicd_adapter.rs  env_reader.rs  mod.rs
src/entry/cli/: arg_parser.rs  cli_runner.rs  interactive.rs  mod.rs  ui.rs
src/executor/: README.md  executor.rs  mod.rs
src/executor/adapters/: foundry_config_writer.rs  mod.rs  solidity_generator.rs
src/executor/infrastructure/: file_system_writer.rs  mod.rs
src/executor/ports/: code_generator_port.rs  config_writer_port.rs  mod.rs
src/executor/use_cases/: apply_patch.rs  execute.rs  mod.rs  write_bodies.rs
src/executor/writers/: bodies_writer.rs  foundry_config_writer.rs  invariant_writer.rs  memory_writer.rs  mod.rs  solidity_generator.rs
src/fuzzer/: fuzzer.rs  fuzzer_engine.rs  mod.rs
src/fuzzer/infrastructure/: forge_runner.rs  mod.rs
src/fuzzer/ports/: mod.rs  reader_port.rs  test_runner_port.rs
src/fuzzer/use_cases/: enrich_coverage.rs  evaluate_outcome.rs  mod.rs  run_coverage.rs  run_fuzzer.rs  run_fuzzer_session.rs
src/generator/: mod.rs
src/generator/domain/: fuzz_output_parser.rs  generation_response.rs  mod.rs  prompt.rs
src/generator/use_cases/: assemble_prompt.rs  mod.rs  run.rs
src/interfaces/: mod.rs
src/interfaces/artifacts/: executor_input.rs  foundry_config.rs  fuzzer_config_artifact.rs  mod.rs
src/interfaces/contexts/: contract_context.rs  coverage_context.rs  fuzz_report_context.rs  mod.rs
src/interfaces/ports/: mod.rs  (+8 more)
src/llm/: llm.rs  llm_engine.rs  mod.rs
src/orchestrator/: mod.rs  orchestrator.rs  session_orchestrator.rs
src/reader/: mod.rs  reader.rs
src/reporter/: mod.rs  reporter.rs
src/shared/: lcov.rs  mod.rs
tests/: README.md  openrouter_gen_exec_flow.rs
tests/executor/: executor_integration.rs
tests/fixtures/: Vault.bodies.json
tests/fuzzer/: fuzzer_integration.rs
tests/reader/: reader_integration.rs
(+229 files in other folders)
