[package]
name = "fuzzming"
version = "0.1.0"
edition = "2021"

[lib]
name = "fuzzming"
path = "src/lib.rs"

[[bin]]
name = "fuzzming"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
indexmap = { version = "2", features = ["serde"] }
litellm-rs = { version = "0.4.16", default-features = false, features = ["lite"] }
