[package]
name = "fuzzming"
version = "0.1.0"
edition = "2021"

[lib]
name = "fuzzming"
path = "src/lib.rs"

[[bin]]
name = "fuzzming"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "executor_integration"
path = "tests/executor/executor_integration.rs"
