[package]
name = "fuzzming"
version = "1.0.1"
edition = "2021"
description = "LLM-powered fuzzing assistant for Solidity smart contracts — generates, runs, and iterates invariant tests with Foundry"
license = "Apache-2.0"
repository = "https://github.com/fuzzming/fuzzming"
readme = "README.md"
keywords = ["fuzzing", "solidity", "smart-contracts", "llm", "foundry"]
categories = ["command-line-utilities", "development-tools::testing"]

[lib]
name = "fuzzming"
path = "src/lib.rs"

[[bin]]
name = "fuzzming"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
indexmap = { version = "2", features = ["serde"] }
litellm-rs = { version = "0.4.16", default-features = false, features = [
    "lite",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console = "0.15"
dialoguer = "0.11"
walkdir = "2"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "executor_integration"
path = "tests/executor/executor_integration.rs"

[[test]]
name = "reader_integration"
path = "tests/reader/reader_integration.rs"

[[test]]
name = "fuzzer_integration"
path = "tests/fuzzer/fuzzer_integration.rs"
